<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/tekst1"
        android:textColor="#FBF9F9"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:background="#424141"
        android:gravity="center_horizontal"
        android:shadowColor="#EABE3A"
        android:text="@string/playgame"
        android:textColor="#FBF8F8"
        android:textSize="36sp"
        android:onClick="playOnClick"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:background="#424141"
        android:gravity="center_horizontal"
        android:shadowColor="#EABE3A"
        android:text="@string/about"
        android:textColor="#FBF8F8"
        android:textSize="36sp"
        android:onClick="aboutOnClick"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:background="#424141"
        android:gravity="center_horizontal"
        android:shadowColor="#EABE3A"
        android:text="@string/quit"
        android:textColor="#FBF8F8"
        android:textSize="36sp"
        android:onClick="exitOnClick"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="435dp"
        android:layout_height="149dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        app:srcCompat="@mipmap/iksoks_foreground" />

</LinearLayout>